--- a/package.json
+++ b/package.json
@@ -1,33 +1,23 @@
 {
   "name": "ToDoApp",
   "version": "1.0.0",
+  "private": true,
   "description": "App to track to-dos",
   "main": "server.js",
   "dependencies": {
-    "body-parser": "^1.10.0",
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
     "ejs": "^2.3.4",
-    "express": "^4.13.3",
     "express-session": "^1.13.0",
-    "mysql": "^2.10.0",
+    "jquery": "^2.2.0",
+    "mysql": "^2.10.2",
     "passport": "^0.3.2",
     "passport-twitter": "^1.0.3"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Premmie/ToDoApp"
-  },
-  "keywords": [
-    "ToDoApp"
-  ],
-  "author": "TI1 60",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Premmie/ToDoApp/issues"
-  },
-  "homepage": "https://github.com/Premmie/ToDoApp"
-}
+    }
+  }
